--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -20,7 +20,7 @@
 
       </ul>
     </nav>
-    <div class="copyright float-right">* Проект для обучения Angular/TS + Java/SprigBoot/Hibernate&nbsp;&nbsp;
+    <div class="copyright float-right">
       © {{year | date: 'yyyy'}} <i class="material-icons">favorite</i>
       <a [href]="site" target="_blank">{{siteName}}</a>
     </div>
